@@ -115,13 +115,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) event: Avoid possible blocking in the listener thread when shutting down
-     connections. PR 60956.
-     trunk patch: http://svn.apache.org/r1802875
-     2.4.x patch: trunks works (module CHANGES)
-                  svn merge -c 1802875 ^/httpd/httpd/trunk .
-     +1: ylavic, jim, icing
-
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
